NEW DEPSGRAPH: New Torus created can't be transformed! #45364

Closed
opened 2015-07-07 14:29:28 +02:00 by Mario Mey · 8 comments

In 2.75 (from blender.org), with new depsgraph active, there's something strange with the Torus...

  • New scene
  • Delete Cube
  • Add Torus
  • Try to scale... you can't.

Without --enable-new-depsgraph, the Torus can be scaled after creating it.

In 2.75 (from blender.org), with new depsgraph active, there's something strange with the Torus... - New scene - Delete Cube - Add Torus - Try to scale... you can't. Without --enable-new-depsgraph, the Torus can be scaled after creating it.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarioSottile

Added subscriber: @MarioSottile
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Yep, can confirm that, rotate & scale also doesn't work.

Yep, can confirm that, rotate & scale also doesn't work.
Julian Eisel changed title from NEW DEPSGRAPH: New Torus created can't be scaled! to NEW DEPSGRAPH: New Torus created can't be transformed! 2015-07-07 14:35:33 +02:00
Sergey Sharybin was assigned by Julian Eisel 2015-07-07 14:35:33 +02:00

Added subscriber: @sindra1961

Added subscriber: @sindra1961

When you carry out Undo in it even once, it works as usual.
version 2.75 (sub 2), branch b'master', commit date b'2015-07-07' b'17:29', hash b'de6b4dc', b'Release'

When you carry out Undo in it even once, it works as usual. version 2.75 (sub 2), branch b'master', commit date b'2015-07-07' b'17:29', hash b'de6b4dc', b'Release'

This issue was referenced by b16bf6da80

This issue was referenced by b16bf6da80e094cec38384ec5ca877559d1fa9bf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45364
No description provided.